# Raspy-launcher-latest-test

./: CMakeLists.txt  README.md  README.txt  addonrepomanager.cpp  addonrepomanager.h  app_icon.rc  license.txt  main.cpp  qtraspy.qrc
assets/: font.txt  main_bg.bmp.BAK  news_bg.bmp.UPDATER_TEST_BACKGROUND
scripts/: repo.bat  repo.sh
scripts/discord-news-bot/: newsbot.py
scripts/discord-translator-bot/: translatorbot.py
